Curve object has no Outline when selected with Edge Split Modifier and Curve has Bevel object #37170

Closed
opened 2013-10-21 17:37:17 +02:00 by Juha Wiiala · 9 comments

%%%--- Operating System, Graphics card ---
Win7 Ultimate 64bit, Nvidia Quadro 600

- Blender version with error, and version that worked ---

Blender 64 bit, r60874

- Short description of error ---

Curve object has no Outline hightlight when selected

Curve properties:
Curve has Bevel Object
Modifiers: EdgeSplit

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- Win7 Ultimate 64bit, Nvidia Quadro 600 - Blender version with error, and version that worked --- Blender 64 bit, r60874 - Short description of error --- Curve object has no Outline hightlight when selected Curve properties: Curve has Bevel Object Modifiers: EdgeSplit - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hm, works fine here (OSX). Can you attach a file where it doesn't work for you?%%%

%%%Hm, works fine here (OSX). Can you attach a file where it doesn't work for you?%%%
Author

%%%I can attach, and I noticed that when Fill Caps is ON, then it shows Outline.%%%

%%%I can attach, and I noticed that when Fill Caps is ON, then it shows Outline.%%%

%%%Works for me on linux. Someone on windows to confirm the issue?%%%

%%%Works for me on linux. Someone on windows to confirm the issue?%%%
Sergey Sharybin self-assigned this 2013-12-04 16:36:26 +01:00

Can reproduce on WIndows. Assigning to self.

Can reproduce on WIndows. Assigning to self.

This issue was referenced by blender/blender-addons-contrib@d94202b312

This issue was referenced by blender/blender-addons-contrib@d94202b312d1b3a977d14dac0dbc30e31e1cb444

This issue was referenced by d94202b312

This issue was referenced by d94202b312d1b3a977d14dac0dbc30e31e1cb444

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d94202b312.

Closed by commit d94202b312.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37170
No description provided.