Fix T37170: Missing curve outline when using constructive modifiers

Issue was caused by wrong bool flag assignment.